fix: design correction and bugs line spacing and div breaking

--- a/src/components/css/About.css
+++ b/src/components/css/About.css
@@ -11,7 +11,7 @@
 
 .about-text {
     min-width: 50%;
-    padding: 0 5rem;
+    padding-right: 5rem;
 }
 
 .about-text h1 {
@@ -26,6 +26,7 @@
     font-family: "Nunito";
     font-size: 1.2rem;
     padding-bottom: 1.5rem;
+    line-height: normal;
 }
 
 .about-text img {
@@ -82,6 +83,7 @@
     .about-text h2 {
         font-size: 1.2rem;
         text-align: center;
+        line-height: 1.25rem;
     }
     .about-text img {
         display: block;
