--- a/src/components/css/Timeline.css
+++ b/src/components/css/Timeline.css
@@ -18,7 +18,7 @@
     font-weight: 100;
     text-align: left;
     line-height: normal;
-    color: #969696;
+    color: #7f7f7f;
     font-style: italic;
     padding: 10px;
     border-left: 5px solid #ccc;
@@ -43,8 +43,9 @@
     padding: 20px;
     border-radius: 20px;
     margin-bottom: 2rem;
+    background-color: #fff;
 
-    box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
+    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
 }
 
 .timeline-scroll-container {
@@ -78,8 +79,6 @@
     .Timeline-container {
         max-height: 40vh;
         overflow-y: visible;
-        padding: 0;
-        border-radius: 0;
-        box-shadow: none;
+        box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
     }
 }
